# ic-mo-vm

./: .gitignore  Cargo.toml  dfx.json  ic-mo-vm.did  ic_mo_vm.did  lib.rs
.github/workflows/: canister.yml  rust.yml
src/: lib.rs  stable_map.rs
