[package]
name = "ic_mo_vm"
version = "0.1.0"
authors = ["Human"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.16"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
motoko = { branch = "main" , git = "https://github.com/dfinity/motoko.rs" }
# motoko_proc_macro = { git = "https://github.com/dfinity/motoko.rs", branch = "main" }