[package]
name = "ic_mo_vm"
version = "0.1.0"
authors = ["Human"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ic-stable-structures = "0.1.1"
motoko = { git = "https://github.com/dfinity/motoko.rs", branch = "main", default-features = false, features = ["parser"] }
# motoko_proc_macro = { git = "https://github.com/dfinity/motoko.rs", branch = "main" }
